<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="cl.octavionancul.miscalorias.TMBFragment">

    <!-- TODO: Update blank fragment layout -->

    <RadioGroup
        android:id="@+id/genderRg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/maleRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maleRb" />

        <RadioButton
            android:id="@+id/femaleRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femaleRb" />

    </RadioGroup>

    <EditText

        android:id="@+id/ageEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ageEt"
        android:inputType="number"
        android:maxLength="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/heightEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/heightEt"
            android:inputType="number"
            android:maxLength="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heightTv" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/weightEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/weightEt"
            android:inputType="number"
            android:maxLength="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weightTv" />

    </LinearLayout>

    <Button
        android:id="@+id/calculateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/calculateBtn"
        />

</LinearLayout>
